@@ -13,6 +13,9 @@ subunit release notes
 
   IMPROVEMENTS:
 
+    * In the python API addExpectedFailure from python 2.7/3.1 is now
+      supported.
+
     * INSTALLDIRS can be set to control the perl MakeMaker 'INSTALLDIRS'
       viarable when installing.
 
